--- a/css/style.scss
+++ b/css/style.scss
@@ -458,6 +458,7 @@ Wrapping all content to prevent horizontal scrolling.
 #scene3{
   width: 161em;
   height: 172em;
+  overflow: hidden;
   
   // TODO: use individual mushrooms for subtle animation
 /*  background: url(../images/bg_scn-caterpillar-shroomless.jpg) top left no-repeat;*/
@@ -536,8 +537,10 @@ Wrapping all content to prevent horizontal scrolling.
       .shadow{
          position: absolute;
          -webkit-transform-origin: left top;
-         top: 0;                   
-/*         -webkit-filter: blur(6px)*/
+         top: 0;       
+         // TODO: apply filter on a group level. try translateZ.            
+         -webkit-transform: translateZ(0);
+         -webkit-filter: blur(6px)
       }
       
       .shadow1{
@@ -547,7 +550,7 @@ Wrapping all content to prevent horizontal scrolling.
         top: -10em;
         -webkit-transform: rotate(50deg);
         background: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.1));
-        -webkit-animation: swiv1 8s infinite ease-in-out;
+/*        -webkit-animation: swiv1 8s infinite ease-in-out;*/
       }
 
       .shadow2{
@@ -557,7 +560,7 @@ Wrapping all content to prevent horizontal scrolling.
         top: -10em;
         -webkit-transform: rotate(40deg);
         background: -webkit-linear-gradient(left, rgba(0,0,0,0.4) 40%, rgba(0,0,0,0));
-        -webkit-animation: swiv2 8s 0.5s infinite ease-in-out;
+/*        -webkit-animation: swiv2 8s 0.5s infinite ease-in-out;*/
         
       }
 
@@ -568,8 +571,60 @@ Wrapping all content to prevent horizontal scrolling.
         top: -10em;
         -webkit-transform: rotate(32deg);
         background: -webkit-linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.3) 55%, rgba(0,0,0,0) 90%);
-        -webkit-animation: swiv3 8s 1s infinite ease-in-out;
+/*        -webkit-animation: swiv3 8s 1s infinite ease-in-out;*/
       }
+      
+      .shadow4{
+        width: 40em;
+        height: 95em;
+        left: 18em;
+        top: -10em;
+        -webkit-transform: rotate(17deg);
+        background: -webkit-linear-gradient(left, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0) 90%);
+      }
+      
+      .shadow5{
+        width: 56em;
+        height: 95em;
+        left: 14em;
+        top: -2em;
+        -webkit-transform: rotate(-7deg);
+        background: -webkit-linear-gradient(65deg, rgba(0,0,0,0.9) 50%, transparent 85%);
+      }
+      
+      .shadow4,
+      .shadow5{
+        -webkit-transtion: all;
+        -webkit-transition-timing-function: cubic-bezier(.36,0,.27,1.08);
+      }
+      
+      .shadow4{
+        -webkit-transition-duration: 1.8s;
+        -webkit-transition-delay: 0.2s;
+      }                               
+
+      .shadow5{
+        -webkit-transition-duration: 1.8s;
+      }
+      
+      
+      // applay 'day' class to .act2 to run the shadow & caterpillar transition
+      &.day,
+      &:hover{
+        .caterpillar-shape.light{
+          opacity: 1; 
+        }
+        .caterpillar-shape.dark{
+          opacity: 0;
+          -webkit-filter: blur(7px);
+        }
+        
+        .shadow4,
+        .shadow5{
+          opacity: 0;
+        }
+      }
+      
 
       .caterpillar-shape{
         position: absolute;
@@ -577,8 +632,20 @@ Wrapping all content to prevent horizontal scrolling.
         height: 19em;
         top: 10em;
         left: 5em;
-        background: url(../images/caterpillar-day.png) top left no-repeat;
         background-size: contain;
+        -webkit-transform: translateZ(0);
+        
+        &.light{  
+          -webkit-transition: all 1s 0.2s ease-in;
+          opacity: 0;
+          background: url(../images/caterpillar-day.png) top left no-repeat;
+        }
+
+        &.dark{ 
+          -webkit-transition: all 2s ease-out;
+          opacity: 1;
+          background: url(../images/caterpillar-night.png) top left no-repeat;
+        }
       }
       
     }
