--- a/css/style.scss
+++ b/css/style.scss
@@ -586,7 +586,7 @@ Wrapping all content to prevent horizontal scrolling.
       
       .shadow4,
       .shadow5{
-        -webkit-transtion: all;
+        -webkit-transition: all;
         -webkit-transition-timing-function: cubic-bezier(.36,0,.27,1.08);
       }
       
