--- a/css/style.css
+++ b/css/style.css
@@ -74,16 +74,15 @@ Wrapping all content to prevent horizontal scrolling.
   background: black;
   position: relative; }
 
-#trans {
+#overlay {
+  position: fixed;
+  z-index: 3;
   width: 100%;
   height: 100%;
-  position: absolute;
   top: 0;
-  z-index: 9;
   background-color: black;
-  opacity: 0; }
-  #trans.hidden {
-    visibility: hidden; }
+  opacity: 0;
+  visibility: hidden; }
 
 @-webkit-keyframes title-in {
   100% {
@@ -140,7 +139,7 @@ Wrapping all content to prevent horizontal scrolling.
     /*    -webkit-transform: scale(8);*/ }
 
 #scene2_1 {
-  /*  display: none;*/
+  display: none;
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
   background-size: 100%;
   width: 109em;
@@ -193,7 +192,7 @@ Wrapping all content to prevent horizontal scrolling.
     margin-bottom: 3em; }
 
 #scene2_2 {
-  /*  display: none;*/
+  display: none;
   background: black url(../images/bg_scn2_part_r2_c1_s1.jpg) 0 top no-repeat;
   background-size: 100%;
   width: 278.75em;
