fix for scene 3 offset due to transition

--- a/css/style.scss
+++ b/css/style.scss
@@ -464,6 +464,7 @@ Wrapping all content to prevent horizontal scrolling.
   height: 172em;
   overflow: hidden;
   position: relative;
+  margin-bottom: 300px;
   
   // TODO: use individual mushrooms for subtle animation
 /*  background: url(../images/bg_scn-caterpillar-shroomless.jpg) top left no-repeat;*/
