--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ Scroll events don't trigger on vertical scrolling if overflow-x is applied to th
 Wrapping all content to prevent horizontal scrolling. 
 */
 .wrapper {
-  /*  overflow-x: hidden;*/
+  overflow-x: hidden;
   /* Use font-size to scale the scenes. They are in ems */
   font-size: 100%;
   background: black;
@@ -88,7 +88,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 15px;
+  width: 1px;
   height: 9000px;
   background: yellow; }
   #timeline div {
@@ -398,7 +398,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-transform-origin: left top;
         top: 0;
         -webkit-transform: translateZ(0);
-        /*         -webkit-filter: blur(6px)*/ }
+        -webkit-filter: blur(6px); }
       #scene2 .content .act2 .shadow1 {
         width: 10em;
         height: 60em;
@@ -471,6 +471,7 @@ Wrapping all content to prevent horizontal scrolling.
           opacity: 1;
           background: url(../images/caterpillar-night.png) top left no-repeat; }
     #scene2 .content .dialogue {
+      display: none;
       width: 65em;
       height: 100%;
       position: absolute;
