--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ Wrapping all content to prevent horizontal scrolling.
   background: black;
   position: relative; }
 
+/* Used for cross-fade between scenes */
 #overlay {
   position: fixed;
   z-index: 3;
@@ -88,7 +89,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 1px;
+  width: 15px;
   height: 9000px;
   background: yellow; }
   #timeline div {
@@ -398,7 +399,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-transform-origin: left top;
         top: 0;
         -webkit-transform: translateZ(0);
-        -webkit-filter: blur(6px); }
+        /*         -webkit-filter: blur(6px)*/ }
       #scene2 .content .act2 .shadow1 {
         width: 10em;
         height: 60em;
