--- a/css/style.scss
+++ b/css/style.scss
@@ -51,6 +51,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: relative;
 }
 
+/* Used for cross-fade between scenes */
 #overlay{
   position: fixed;
   z-index: 3;
@@ -67,7 +68,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 1px;
+  width: 15px;
   height: 9000px;
   background:yellow;
   
@@ -494,7 +495,7 @@ Wrapping all content to prevent horizontal scrolling.
          -webkit-transform-origin: left top;
          top: 0;       
          -webkit-transform: translateZ(0);
-         -webkit-filter: blur(6px)
+/*         -webkit-filter: blur(6px)*/
       }
       
       .shadow1{
