--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ body {
 p {
   margin: 0; }
 
+p + p {
+  margin-top: 1.6em; }
+
 .content p {
   /* Keeps font-size consistent with root. */
   font-size: 1rem;
